# pySigma-backend-cortexxdr

./: .gitignore  README.md  print-coverage.py  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/cortexxdr/: __init__.py  cortexxdr.py
sigma/pipelines/cortexxdr/: __init__.py  cortexxdr.py
tests/: test_backend_cortexxdr.py  test_pipelines_cortexxdr.py
