[tool.poetry]
name = "pySigma-backend-cortexxdr"
version = "0.1.2"
description = "pySigma CortexXDR backend"
authors = ["Cori Smith <cs2718281@gmail.com>"]
license = "MIT"
repository = "https://github.com/7RedViolin/pySigma-backend-cortexxdr"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = ">=0.9.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
